[project]
name = "chest-xray-pneumonia-detector"
version = "0.1.0"
description = "Chest X-Ray Pneumonia Detection using Deep Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15.0",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pillow",
    "kagglehub",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = []
